# python

./: README.md  pyproject.toml
array/: inner_array.py
classes/: README.md
classes/inheritance/private-public-attributes/: README.md  no-refactored-code.py  refactored-code.py
classes/isinstance/how-imports-impact/no-using-tests/src/: main.py
classes/isinstance/how-imports-impact/src/: main.py
classes/isinstance/how-imports-impact/tests/: __init__.py  test_main.py
classes/isinstance/how-imports-impact/using-tests/: README.md
classes/isinstance/how-imports-impact/using-tests/src/: exceptions.py  main.py
classes/isinstance/how-imports-impact/using-tests/tests/: test_main.py
dictionary/: order.py
exceptions/catch-a-raised-exception-depends-on-import/: .pre-commit-config.yaml  README.md  makefile
exceptions/catch-a-raised-exception-depends-on-import/src/: exceptions.py  main.py
exceptions/catch-a-raised-exception-depends-on-import/tests/: test_main.py
functions/: README.md
functions/functions_in_other_paths/: README.md
functions/functions_in_other_paths/modifying_sys_path/: README.md
functions/incorrect_args/: main.py
json/: json.json  order.py
mock/class/: README.md
mock/exceptions/: classes.py  test.py
mock/exceptions/src/: exceptions.py  main.py  test.py
mock/exceptions/tests/: test_main.py
namedtuple/: namedtuple_with_typing.py
regex/performance-logs/: README.md
regex/performance-logs/src/: main.py
regex/performance-logs/tests/: test_main.py
temporal-files/: temporal_files.py
(+3 files in other folders)
